# Ship-Draft-Measurement

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: evaluate.py  predict.py  train.py  val.py  visualize.py
ultralytics/: __init__.py
ultralytics/cfg/datasets/: waternum.yaml
ultralytics/cfg/models/mdyolo/: mdyolo.yaml
ultralytics/engine/: model.py
ultralytics/models/yolo/: __init__.py  model.py
ultralytics/nn/: tasks.py
ultralytics/nn/modules/: __init__.py  gab.py  mobilenetv4nop5.py
ultralytics/utils/: checks.py  loss.py  nms.py
ultralytics/utils/callbacks/: base.py
