[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md-yolo"
version = "0.1.0"
description = "Minimal MD-YOLO release for ship draft mark and waterline detection."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0" }
dependencies = [
    "numpy>=1.23.0",
    "matplotlib>=3.3.0",
    "opencv-python>=4.6.0",
    "pillow>=7.1.2",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "psutil>=5.8.0",
    "polars>=0.20.0",
    "ultralytics-thop>=2.0.18",
    "scikit-learn>=1.0.0",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["ultralytics", "ultralytics.*"] } }
package-data = { "ultralytics" = ["**/*.yaml"] }
